[package]
name = "bundles"
version = "0.1.1"
edition = "2024"

license = "MIT OR Apache-2.0"
description = "a special bundler written in rust"

authors = ["James Hunt <jameshuntdevelopment@gmail.com>"]
repository = "https://github.com/jameshuntt/bundles"

[dependencies]

clap = { version = "4.5.37", features = ["derive"] }
syn = { version = "2.0.100", features = ["full", "parsing", "extra-traits"] }

colored = "3.0.0"
walkdir = "2.5.0"
sha2 = "0.10.8"
regex = "1.11.1"
installation = "0.1.0"